log

Thu 17 Aug 2023 01:51:48 AM UTC: 
 exercises.c | 120 +++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 111 insertions(+), 9 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:59:14: error: function returns address of local variable [-Werror=return-local-addr]
   59 |       return newArray;
      |              ^~~~~~~~
exercises.c: In function ‘checkSorted’:
exercises.c:102:3: error: statement with no effect [-Werror=unused-value]
  102 |   for (i ; i<size ;i++){//si es ascendente
      |   ^~~
exercises.c:109:3: error: statement with no effect [-Werror=unused-value]
  109 |   for (i ; i<size; i++ ){
      |   ^~~
exercises.c: In function ‘inicializarLibro’:
exercises.c:140:34: error: ‘aniopublicacion’ undeclared (first use in this function); did you mean ‘anioPublicacion’?
  140 |   strcpy(libro->anioPublicacion, aniopublicacion);
      |                                  ^~~~~~~~~~~~~~~
      |                                  anioPublicacion
exercises.c:140:34: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:140:15: error: passing argument 1 of ‘strcpy’ makes pointer from integer without a cast [-Werror=int-conversion]
  140 |   strcpy(libro->anioPublicacion, aniopublicacion);
      |          ~~~~~^~~~~~~~~~~~~~~~~
      |               |
      |               int
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/features.h:490,
                 from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/ctype.h:25,
                 from exercises.c:1,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/bits/string_fortified.h:77:1: note: expected ‘char * restrict’ but argument is of type ‘int’
   77 | __NTH (strcpy (char *__restrict __dest, const char *__restrict __src))
      | ^~~~~
In file included from test.c:1:
exercises.c:143:23: error: assignment to expression with array type
  143 |   libro->autor.nombre = nombreAutor;
      |                       ^
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5c2422e
Thu 17 Aug 2023 02:11:03 AM UTC: 
 exercises.c | 15 ++++++---------
 1 file changed, 6 insertions(+), 9 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:46:6: error: ‘newsize’ undeclared (first use in this function); did you mean ‘newSize’?
   46 |     *newsize=0;
      |      ^~~~~~~
      |      newSize
exercises.c:46:6: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function ‘checkSorted’:
exercises.c:99:3: error: statement with no effect [-Werror=unused-value]
   99 |   for (i ; i<size ;i++){//si es ascendente
      |   ^~~
exercises.c:106:3: error: statement with no effect [-Werror=unused-value]
  106 |   for (i ; i<size; i++ ){
      |   ^~~
exercises.c: In function ‘inicializarLibro’:
exercises.c:137:34: error: ‘aniopublicacion’ undeclared (first use in this function); did you mean ‘anioPublicacion’?
  137 |   strcpy(libro->anioPublicacion, aniopublicacion);
      |                                  ^~~~~~~~~~~~~~~
      |                                  anioPublicacion
exercises.c:137:15: error: passing argument 1 of ‘strcpy’ makes pointer from integer without a cast [-Werror=int-conversion]
  137 |   strcpy(libro->anioPublicacion, aniopublicacion);
      |          ~~~~~^~~~~~~~~~~~~~~~~
      |               |
      |               int
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/features.h:490,
                 from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/ctype.h:25,
                 from exercises.c:1,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/bits/string_fortified.h:77:1: note: expected ‘char * restrict’ but argument is of type ‘int’
   77 | __NTH (strcpy (char *__restrict __dest, const char *__restrict __src))
      | ^~~~~
In file included from test.c:1:
exercises.c:140:23: error: assignment to expression with array type
  140 |   libro->autor.nombre = nombreAutor;
      |                       ^
cc1: all warnings being treated as errors
Compilation failed
c1cba8e
Thu 17 Aug 2023 02:11:22 AM UTC: 
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:46:6: error: ‘newsize’ undeclared (first use in this function); did you mean ‘newSize’?
   46 |     *newsize=0;
      |      ^~~~~~~
      |      newSize
exercises.c:46:6: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function ‘checkSorted’:
exercises.c:99:3: error: statement with no effect [-Werror=unused-value]
   99 |   for (i ; i<size ;i++){//si es ascendente
      |   ^~~
exercises.c:106:3: error: statement with no effect [-Werror=unused-value]
  106 |   for (i ; i<size; i++ ){
      |   ^~~
exercises.c: In function ‘inicializarLibro’:
exercises.c:137:34: error: ‘aniopublicacion’ undeclared (first use in this function); did you mean ‘anioPublicacion’?
  137 |   strcpy(libro->anioPublicacion, aniopublicacion);
      |                                  ^~~~~~~~~~~~~~~
      |                                  anioPublicacion
exercises.c:137:15: error: passing argument 1 of ‘strcpy’ makes pointer from integer without a cast [-Werror=int-conversion]
  137 |   strcpy(libro->anioPublicacion, aniopublicacion);
      |          ~~~~~^~~~~~~~~~~~~~~~~
      |               |
      |               int
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/features.h:490,
                 from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/ctype.h:25,
                 from exercises.c:1,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/bits/string_fortified.h:77:1: note: expected ‘char * restrict’ but argument is of type ‘int’
   77 | __NTH (strcpy (char *__restrict __dest, const char *__restrict __src))
      | ^~~~~
In file included from test.c:1:
exercises.c:140:23: error: assignment to expression with array type
  140 |   libro->autor.nombre = nombreAutor;
      |                       ^
cc1: all warnings being treated as errors
Compilation failed
280698e
